Closed Bug 1096632 Opened 10 years ago Closed 10 years ago

crash in mozilla::WebGLContext::TexImageFromVideoElement(StrongGLenum<TexImageTargetDetails>, int, unsigned int, unsigned int, unsigned int, mozilla::dom::Element&)

Categories

(Core :: Graphics: CanvasWebGL, defect)

All
macOS
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla37
Tracking Status
firefox36 --- verified
firefox37 --- verified

People

(Reporter: gal, Assigned: chiajung)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file, 2 obsolete files)

This bug was filed from the Socorro interface and is 
report bp-c84f65b8-4332-47e5-9530-9ab672141110.
=============================================================

I get an instant crash trying to view the polar sea demo in Nightly/Mac.
E10S enabled, I assume?
I don't see it on 10.9 - Dan, you have 10.10 - can you see this crash with or without E10S enabled?
Flags: needinfo?(dglastonbury)
Attached patch v1 (obsolete) — Splinter Review
Fix the crash for a null image.

BTW, there must be some related video ready state bugs out side here, but this sanity check should be good.
Attachment #8521101 - Flags: review?(jgilbert)
(In reply to Chiajung Hung [:chiajung] from comment #3)
> Created attachment 8521101 [details] [diff] [review]
> v1
> 
> Fix the crash for a null image.
> 
> BTW, there must be some related video ready state bugs out side here, but
> this sanity check should be good.

Are you sure this is the right patch? This is huge for just checking for a null image.
Oh...sorry, I attached wrong file, since the mac device is not mine...I will upload correct one soon.
Attached patch v1_correct (obsolete) — Splinter Review
Sorry for wrong attachment
Attachment #8521101 - Attachment is obsolete: true
Attachment #8521101 - Flags: review?(jgilbert)
Attachment #8521103 - Flags: review?(jgilbert)
Comment on attachment 8521103 [details] [diff] [review]
v1_correct

Review of attachment 8521103 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/canvas/WebGLContext.cpp
@@ +1826,5 @@
>  
>      gl->MakeCurrent();
>      nsRefPtr<mozilla::layers::Image> srcImage = container->LockCurrentImage();
> +    if (!srcImage)
> +      return false;

4-space indents!
Attachment #8521103 - Flags: review?(jgilbert) → review+
Attached patch v1_finalSplinter Review
Fix idention, carry r+.
Assignee: nobody → chung
Attachment #8521103 - Attachment is obsolete: true
Attachment #8521118 - Flags: review+
Keywords: checkin-needed
Hi, could you provide a try run thanks!
Flags: needinfo?(chung)
Try ticket:
https://tbpl.mozilla.org/?tree=Try&rev=cbacef1a0f06
Flags: needinfo?(chung)
(In reply to Milan Sreckovic [:milan] from comment #2)
> I don't see it on 10.9 - Dan, you have 10.10 - can you see this crash with
> or without E10S enabled?

On 10.10 Yosemite, with FF 36.0a1 (2014-11-13) and e10s *off*, I get a reproducible crash. With e10s *on*, there is no crash and I see video.
Flags: needinfo?(dglastonbury)
Just needinfo'ing in case you forgot this.
Flags: needinfo?(chung)
Oh.. I forgot to set checkin-needed flag.

Thanks!
Flags: needinfo?(chung)
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/cbfba445b09e
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
So looks like Firefox 36 (beta) is currently affected by the bug. Do we want to uplift this ?
Flags: needinfo?(chung)
Comment on attachment 8521118 [details] [diff] [review]
v1_final

Approval Request Comment
[Feature/regressing bug #]:
[User impact if declined]: Crash
[Describe test coverage new/current, TreeHerder]:
[Risks and why]: Low, we are avoiding using null pointer.
[String/UUID change made/needed]:
Attachment #8521118 - Flags: approval-mozilla-beta?
Attachment #8521118 - Flags: approval-mozilla-aurora?
Comment on attachment 8521118 [details] [diff] [review]
v1_final

The patch landed in 37 already.
Attachment #8521118 - Flags: approval-mozilla-beta?
Attachment #8521118 - Flags: approval-mozilla-beta+
Attachment #8521118 - Flags: approval-mozilla-aurora?
Attachment #8521118 - Flags: approval-mozilla-aurora-
Flags: needinfo?(chung)
Flags: qe-verify+
In the last 2 weeks there were:
- 10 crashes on 36.0b5 (none in beta 6/7)
- none for Firefox 37.

Also, no longer reproducing with the polar sea demo.
Closing.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: