Bug 1096632 - Add a null check in case webgl app calls to glTexImage(<video>) while no frame inserted into ImageContainer. r=jgilbert